2010-03-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-text-entity-charset): Fix regexp matching meta
	tag.

2010-03-09  David Engster  <dengste@eml.cc>

	* shimbun.el (shimbun-mime-replace-image-tags): Pay attention to
	w3m-ignored-image-url-regexp.

2010-03-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-text-entity-charset): Prefer meta charset rather
	than the one shimbun decides.

2010-03-03  David Engster  <dengste@eml.cc>

	* sb-rss-blogs.el (shimbun-get-headers): Replace call to
	shimbun-rss-get-headers with luna-call-next-method.

	* sb-rss.el (shimbun-get-headers): Revert 5th arg `quit-immediately'.
	(shimbun-rss-get-headers): Delete those headers which only appear to
	be new but are actualy older than the ones we already have.  Sort the
	headers by date if possible.  Added doc-string.
	(shimbun-rss-get-headers-1): New helper function to fetch all items.

	* sb-atom.el (shimbun-atom-get-headers, shimbun-atom-get-headers-1):
	Same changes as for sb-rss.el.

2010-02-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-rss.el (shimbun-rss-get-headers): Add 5th arg `quit-immediately'
	that tells this function to quit when an article that has ever been
	fetched is found.

	* sb-rss-blogs.el (shimbun-get-headers): Set 5th arg passed to it.

2010-02-18  David Engster  <dengste@eml.cc>

	* sb-rss-blogs.el (shimbun-rss-blogs-groups): Removed.
	(shimbun-groups): New override.

2010-02-17  David Engster  <dengste@eml.cc>

	* sb-atom.el (shimbun-atom-get-headers): When encountering an already
	present article, stop fetching further entries.
	* sb-rss.el (shimbun-rss-get-headers): Same change as in sb-atom.

2010-02-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-itmedia.el (shimbun-itmedia-group-alist): Add ogikubo, tachibana,
	and unakami groups in the +D.lifestyle.column hierarchy.
	(shimbun-index-url, shimbun-get-headers): Work for newly added groups.

2010-01-14  Katsumi Yamaoka  <yamaoka@jpl.org>
