@@ -1,3 +1,7 @@
+2010-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sb-kantei.el (shimbun-kantei-x-face-alist): Add new face.
+
 2010-03-29  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shimbun.el (shimbun-text-entity-charset): Fix regexp matching meta
